internal/kgateway/extensions2/plugins/serviceentry/testdata/output/serviceentry-backendref.yaml
Listeners:
- address:
    socketAddress:
      address: '::'
      ipv4Compat: true
      portValue: 8080
  filterChains:
  - filters:
    - name: envoy.filters.network.http_connection_manager
      typedConfig:
        '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
        httpFilters:
        - name: envoy.filters.http.router
          typedConfig:
            '@type': type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
        mergeSlashes: true
        normalizePath: true
        rds:
          configSource:
            ads: {}
            resourceApiVersion: V3
          routeConfigName: http
        statPrefix: http
        useRemoteAddress: true
    name: http
  name: http
Routes:
- ignorePortInHostMatching: true
  name: http
  virtualHosts:
  - domains:
    - se.example.com
    name: http~se_example_com
    routes:
    - match:
        prefix: /
      name: http~se_example_com-route-0-httproute-example-route-infra-0-0-matcher-0
      route:
        cluster: istio-se_infra_example-se_se.example.com_80
        clusterNotFoundResponseCode: INTERNAL_SERVER_ERROR
